<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A3DAE1"
    android:orientation="vertical"
    tools:context=".ActivityDash">

    <Button
        android:id="@+id/btnadd"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/btncreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtmenu" />

    <Button
        android:id="@+id/btnlist"
        android:layout_width="404dp"
        android:layout_height="52dp"
        android:text="@string/PantallaLista"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnadd"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/txtmenu"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="656dp"
        android:fontFamily="sans-serif"
        android:text="@string/txtmenu"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>